--- a/views/links.ejs
+++ b/views/links.ejs
@@ -42,7 +42,7 @@
     <h1>List of links</h1>
     
       <div class="container">
-     
+        <div class="table-responsive">
         <table id="dtBasicExample" class="table table-striped table-bordered table-sm table-fixed" cellspacing="0" width="100%">
           <thead>
             <tr>
@@ -87,6 +87,7 @@
         </table>
         <br><br>
         <a href="index.html">Back to home</a>
+     </div>
      </div>
     
     <!-- SCRIPTS -->
